# DjangoApp

./: pyproject.toml
DjangoDir/: db.sqlite3
DjangoDir/BooksAPIApp/: forms.py  models.py  urls.py  views.py
DjangoDir/BooksAPIApp/migrations/: 0001_initial.py
DjangoDir/BooksAPITemplates/: book_form.html  confirmed_retrieved.html  todos_libros.html
DjangoDir/DjangoProj/: settings.py  urls.py
DjangoDir/MenuAPIApp/: apps.py  models.py  serializers.py  throttles.py  urls.py  views.py
DjangoDir/MenuAPIApp/migrations/: 0001_initial.py  0002_delete_menuitems.py  0003_initial.py  0004_category_menuitems_category.py
DjangoDir/MenuAPITemplates/: menu-items.html
DjangoDir/SampleTemplates/: form.html  forms2.html  forms3.html  forms4.html  forms5.html  hello.html
DjangoDir/SampleWorks/: apps.py  forms.py  models.py  urls.py  views.py
DjangoDir/SampleWorks/migrations/: 0001_initial.py
DjangoDir/SampleWorks/templates/: hello.html
DjangoDir/Samples/: apps.py  views.py
DjangoDir/firstAPIApp/: views.py
